--- a/impressum.html
+++ b/impressum.html
@@ -61,7 +61,7 @@
           <div class="section-header" data-aos="fade-up" data-aos-delay="100">
             <h2>Impressum.</h2>
             <p>TECH CITY GMBH  S.A.R.L 
-              Poststraße 20 <br><br><br><br>
+ <br><br><br><br>
 
 
 
@@ -92,7 +92,14 @@
               <!--HADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAAAAAAAAAADA-->
               <!--HADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAAAAAAAAAADA-->
 
-DE-20354 Hamburg  <br><br><br><br>
+Berlin = Triftstraße 65, 13353 Berlin
+ 
+
+
+
+
+
+  <br><br><br><br>
  
 
               <!--HADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAAAAAAAAAADA-->
