--- a/index.html
+++ b/index.html
@@ -711,23 +711,34 @@ Den ersten Schritt haben wir hiermit schon gemacht. Jetzt liegt es an Ihnen! Gan
     <div class="vc_row">
         <div class="vc_col-sm-4">
             <img src="app/themes/wederundnoch/includes/img/footer_muc.jpg">
-            <a href="#"><strong>Kontakt München</strong></a><br />
-            Augustenstraße 16<br />
-            80333 München<br />
+            <a href="#"><strong>Kontakt  </strong></a><br />
+         Berlin = Triftstraße 65, 13353 Berlin
+ 
+
+
+<br />
             <a href="tel:+4915792483630" class="tel">+4915792483630</a>
         </div>
         <div class="vc_col-sm-4">
             <img src="app/themes/wederundnoch/includes/img/footer_bgh.jpg">
             <strong>Kontakt Burghausen</strong><br />
-            Stadtplatz 111<br />
-            84489 Burghausen<br />
-            <a href="tel:+4915792483630" class="tel">+4915792483630</a>
+           Berlin = Triftstraße 65, 13353 Berlin
+ 
+ 
+<br />
+             <a href="tel:+4915792483630" class="tel">+4915792483630</a>
         </div>
         <div class="vc_col-sm-4">
             <img src="app/themes/wederundnoch/includes/img/footer_hh.jpg">
             <a href="standort-hamburg/index.html"><strong>Kontakt Hamburg</strong></a><br />
-            Kleine Freiheit 46/48<br />
-            22767 Hamburg<br />
+         Berlin = Triftstraße 65, 13353 Berlin
+ 
+
+
+
+
+
+<br />
             <a href="tel:+4915792483630" class="tel">+4915792483630</a>
         </div>
     </div>
