--- a/impressum.html
+++ b/impressum.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   
-<!-- Mirrored from zrtechsolutions.com/demo/html/techit/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 07 Apr 2024 00:46:18 GMT -->
-<head>
+ <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -606,7 +605,7 @@ Telefon: +4915792483630
 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="https://api.whatsapp.com/send?phone=+4915792483630" class="float bounce" target="_blank">
+<a href="https://wa.me/+212649979853" class="float bounce" target="_blank">
 <i class="fa fa-whatsapp my-float"></i>
 </a>
 
@@ -667,7 +666,7 @@ Telefon: +4915792483630
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="https://api.whatsapp.com/send?phone=+4915792483630" class="floate bounce" target="_blank">
+<a href="https://wa.me/+212649979853" class="floate bounce" target="_blank">
 <i class="fa fa-phone my-float"></i>
 </a>
 
@@ -725,7 +724,7 @@ Telefon: +4915792483630
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="https://api.whatsapp.com/send?phone=+4915792483630" class="floati bounce" target="_blank">
+<a href="https://wa.me/+212649979853" class="floati bounce" target="_blank">
   <i class="fa fa-user my-float"></i></a>
 
 
