--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ var borlabsCookiePrioritized = {"domain":"www.wederundnoch.de","path":"\/","vers
 
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<a href="https://api.whatsapp.com/send?phone=+4915792483630" class="float bounce" target="_blank">
+	<a href="https://wa.me/+212649979853" class="float bounce" target="_blank">
 	<i class="fa fa-whatsapp my-float"></i>
 	</a>
 	<style>
@@ -277,7 +277,7 @@ var borlabsCookiePrioritized = {"domain":"www.wederundnoch.de","path":"\/","vers
 	
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<a href="tel:+4915792483630" class="floate bounce" target="_blank">
+	<a href="https://wa.me/+212649979853" class="floate bounce" target="_blank">
 	<i class="fa fa-phone my-float"></i>
 	</a>
 	
@@ -329,7 +329,7 @@ var borlabsCookiePrioritized = {"domain":"www.wederundnoch.de","path":"\/","vers
 
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<a href="tel:+4915792483630" class="floati bounce" target="_blank">
+	<a href="https://wa.me/+212649979853" class="floati bounce" target="_blank">
 	  <i class="fa fa-user my-float"></i></a>
 	<style>
 	
@@ -413,7 +413,7 @@ var borlabsCookiePrioritized = {"domain":"www.wederundnoch.de","path":"\/","vers
                 <div class="wun_showreel_splashscreen_content">
                     <h1 class="wun_showreel_title">Design. Werbung. Kommunikation.</h1>
                     <p class="wun_showreel_subtitle">Agentur mit Herz und Hirn seit 2013 in<br />
-München, Hamburg und Burghausen.</p>
+ .</p>
                     <img decoding="async" src="app/themes/wederundnoch/includes/img/wun_play_button.svg" alt="" class="wun_showreel_button">
                 </div>
             </div>
